--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
                 <div id="map-wrapper"><div id="map">&nbsp;</div></div>
                 <div class="options">
                     <section id="candidates">
-                        <div class="panel legend">
+                        <!-- <div class="panel legend">
                           <h4>Legend</h4>
-                        <div id="legend"></div>
-                        <br><br>
-
+                        <div id="legend"></div> -->
+                        <br><br><br><br><br><br>
                         <div class="table-header">
-                            <div class="name">Farm Size</div>
+                            <div class="name"><strong>Farm Size</strong></div>
                             <!-- <div class="party">_</div> -->
                             <!-- <div class="votes">Value</div> -->
-                            <div class="percentage">Percentage</div>
+                            <div class="percentage"><strong>Percentage</strong></div>
                         </div>
                         <ul></ul>
                         <!-- <a class="action">Show All +</a> -->
