--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <a href="http://ramankuttylab.com/" target="_blank"><img src="img/ubc_logo.png" alt="University of British Columbia" width="156" height="50" class="wamu" /></a>
                 </div>
                 <div class="title">
-                    <h4>The widely reported claim that smallholders produce 70-80% of the world’s food has been a linchpin of agricultural development policy despite limited empirical evidence. Recent empirical attempts to reinvestigate this number have lacked raw data on how much food smallholders produce. We examine variations in crop production by farm size using a newly-compiled global sample of subnational level microdata and agricultural censuses covering 55 countries and 154 crop types than assessed to date. We estimate that farms under 2ha globally produce 28-31% of total crop production and 30-34% of food supply on 24% of gross agricultural area. Farms under 2ha devote a greater proportion of their production to food, and account for greater crop diversity, while farms over 1000ha have the greatest proportion of post-harvest loss. Explore our dataset with this interactive tool and <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">check out the article here.</a></h4>
+                    <p>Smallholder farmers are central to conserving crop diversity, produce more food crops than larger farms, and yet are largely food insecure. These arguments have been a linchpin in recent agricultural development policies. For example, Goal 2 of the UN Sustainable Development Goals (SDGs) aims to end hunger and achieve food security; a key target (SDG 2.3) is by ‘2030, [to] double the agricultural productivity and incomes of small-scale food producers...’ Yet, due to difficulties in definitions and data availability, there is little, global empirical data on smallholder farms, and their role in the food system. <br>
+                    <br>This interactive app lets you explore our recent study that tries to add to this global monitoring challenge. <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">Check out the article and open-dataset here.</a></p>
                 </div>
             </div>
         </header>
@@ -50,6 +51,7 @@
             </section>
             <section id="exhibit">
                 <div id="hover-label">
+                    <br>
                     <div class="vtd-name"></div>
                     <div class="vtd-description"></div>
                 </div>
@@ -90,7 +92,7 @@
                             <a id="clear-filter" class="action">Clear Filter</a>
                         </div>
                     </div> -->
-                </div>
+                <!-- </div> -->
 
             <!-- Begin custom footer. -->
             <footer>
