Variable desciptions to app

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="title">
                     <p>Smallholder farmers are central to conserving crop diversity, produce more food crops than larger farms, and yet are largely food insecure. These arguments have been a linchpin in recent agricultural development policies. For example, Goal 2 of the UN Sustainable Development Goals (SDGs) aims to end hunger and achieve food security; a key target (SDG 2.3) is by ‘2030, [to] double the agricultural productivity and incomes of small-scale food producers...’ Yet, due to difficulties in definitions and data availability, there is little, global empirical data on smallholder farms, and their role in the food system. <br>
-                    <br>This interactive app lets you explore our recent study that tries to add to this global monitoring challenge. <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">Check out the article and open-dataset here.</a></p>
+                    <br>This interactive app lets you explore our recent study that tries to add to this global monitoring challenge. <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">Check out the article</a> and <a href="https://data.mendeley.com/datasets/tp63z6dz5g/1" target="_blank">open-dataset.</a></p>
                 </div>
             </div>
         </header>
@@ -58,15 +58,19 @@
                 <div id="map-wrapper"><div id="map">&nbsp;</div></div>
                 <div class="options">
                     <section id="candidates">
-                        <!-- <div class="panel legend">
+<!--                         <div class="panel legend">
                           <h4>Legend</h4>
                         <div id="legend"></div> -->
-                        <br><br><br><br><br><br>
+                        <div id="legend" class="descripts"></div>
+                        <br>
+                        <p>We converted all tonnes of production to kilocalories. Then we applied the percent of feed, food, processing, seed, waste, or other based on FAO's food balance sheets. For example, in many countries maize can be used for human consumption, animal feed, a processed biofuel commodity, and seed, while some maize may be lost due to storage and transportation. We split up or sub-national production data based on the FAO's national allocations.</p>
+                        <br><br>
                         <div class="table-header">
                             <div class="name"><strong>Farm Size</strong></div>
                             <!-- <div class="party">_</div> -->
                             <!-- <div class="votes">Value</div> -->
-                            <div class="percentage"><strong>Percentage</strong></div>
+                            <div class="percentage"><strong>Percent of production/area by farm size</strong></div>
+                            <br>
                         </div>
                         <ul></ul>
                         <!-- <a class="action">Show All +</a> -->
