--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <div class="wrapper">
                 <!-- <img class="logo" src="img/logo.png" alt="" /> -->
                 <div class="title">
-                    <h1><a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">How much of the world's food do smallholders produce?</a></h1>
+                    <h1>How much of the world's food do smallholders produce?</h1>
                     <h2>V Ricciardi, N Ramankutty, Z Mehrabi, L Jarvis, B Chookolingo</h2>
                 </div>
                 <div class="credits">
                     <a href="http://ramankuttylab.com/" target="_blank"><img src="img/ubc_logo.png" alt="University of British Columbia" width="156" height="50" class="wamu" /></a>
                 </div>
                 <div class="title">
-                    <p>Smallholder farmers are central to conserving crop diversity, produce more food crops than larger farms, and yet are largely food insecure. These arguments have been a linchpin in recent agricultural development policies. For example, Goal 2 of the UN Sustainable Development Goals (SDGs) aims to end hunger and achieve food security; a key target (SDG 2.3) is by ‘2030, [to] double the agricultural productivity and incomes of small-scale food producers...’ Yet, due to difficulties in definitions and data availability, there is little, global empirical data on smallholder farms, and their role in the food system. <br>
-                    <br>This interactive app lets you explore our recent study that tries to add to this global monitoring challenge. <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">Check out the article</a> and <a href="https://data.mendeley.com/datasets/tp63z6dz5g/1" target="_blank">open-dataset.</a></p>
+                    <p>Explore our new dataset on how much food is produced by differently sized farms. For each of the 55 countries, we found nationally representative surveys and censuses that asked farmers how much of each crop they produced. Using this information, we calculated how much total crop production (in kilocalories) each farm size produced. Because different types of crops are allocated towards human food, animal feed, processed non-food goods, seed for planting, or are wasted in the transportation process, we then worked out how each farm size allocated their production. All together, our dataset has > 150 crops from 55 countries. Click each tab to find out how much food, feed, processed goods, seed, or waste small farms are producing and how much land they're using compared to larger farms - and check out how crop diversity differs across farm sizes.<br>
+                    <br>For more details <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">check out our article</a> and the <a href="https://data.mendeley.com/datasets/tp63z6dz5g/1" target="_blank">downloadable dataset</a> that contains sub-national information.</p>
                 </div>
             </div>
         </header>
@@ -62,14 +62,12 @@
                           <h4>Legend</h4>
                         <div id="legend"></div> -->
                         <div id="legend" class="descripts"></div>
-                        <br>
-                        <p>We converted all tonnes of production to kilocalories. Then we applied the percent of feed, food, processing, seed, waste, or other based on FAO's food balance sheets. For example, in many countries maize can be used for human consumption, animal feed, a processed biofuel commodity, and seed, while some maize may be lost due to storage and transportation. We split up or sub-national production data based on the FAO's national allocations.</p>
                         <br><br>
                         <div class="table-header">
                             <div class="name"><strong>Farm Size</strong></div>
                             <!-- <div class="party">_</div> -->
                             <!-- <div class="votes">Value</div> -->
-                            <div class="percentage"><strong>Percent of production/area by farm size</strong></div>
+                            <div class="percentage"><strong>Percent by farm size</strong></div>
                             <br>
                         </div>
                         <ul></ul>
