--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="http://ramankuttylab.com/" target="_blank"><img src="img/ubc_logo.png" alt="University of British Columbia" width="156" height="50" class="wamu" /></a>
                 </div>
                 <div class="title">
-                    <p>Explore our new dataset on how much food is produced by differently sized farms. For each of the 55 countries, we found nationally representative surveys and censuses that asked farmers how much of each crop they produced. Using this information, we calculated how much total crop production (in kilocalories) each farm size produced. Because different types of crops are allocated towards human food, animal feed, processed non-food goods, seed for planting, or are wasted in the transportation process, we then worked out how each farm size allocated their production. All together, our dataset has > 150 crops from 55 countries. Click each tab to find out how much food, feed, processed goods, seed, or waste small farms are producing and how much land they're using compared to larger farms - and check out how crop diversity differs across farm sizes.<br>
+                    <p>Explore our new dataset on how much food is produced by differently sized farms. For each of the 55 countries, we found nationally representative surveys and censuses that asked farmers how much of each crop they produced. Using this information, we calculated how much total crop production (in kilocalories) each farm size produced. Because different types of crops are allocated towards human food, animal feed, processed non-food goods, seed for planting, or are wasted in the transportation process, we then worked out how each farm size allocated their production. All together, our dataset has > 150 crops from 55 countries. Click each tab to find out how much food, feed, processed goods, seed, or waste small farms are producing- and check out how crop diversity differs across farm sizes.<br>
                     <br>For more details <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">check out our article</a> and the <a href="https://data.mendeley.com/datasets/tp63z6dz5g/1" target="_blank">downloadable dataset</a> that contains sub-national information.</p>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <!-- <div class="color" style="background:<%= color ? color : '#AAA' %>"></div> -->
                 <!-- <div class="headshot"><img src="<%= photo ? photo : 'img/anonymous.gif' %>" alt="" width="44" height="44" /></div> -->
                 <div class="info">
-                    <div class="name"><%= first_name ? first_name + ' ' : '' %><strong><%= last_name %></strong></div>
+                    <div class="name"><strong><%= first_name ? first_name + ' - ' : '' %><%= last_name %> ha</strong></div>
                     <!-- <div class="party"><%= party %></div> -->
                     <!-- <div class="votes"><%= commaSeparateNumber(tally) %></div> -->
                     <div class="percentage">
