--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </li>
         </script>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/lodash.min.js"></script>
         <script src="js/jquery.csv-0.71.min.js"></script>
