Test cear cache for chrome

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!-- Note that this is a customized version of Leaflet to enable fractional zooming. -->
         <script src="js/leaflet-master/leaflet.js"></script>
 
-        <script src="js/main.js"></script>
+        <script src="js/main.js?newversion"></script>
 
         <!-- Change UA-56383922-1 to your GA tracking code. -->
         <script>
