--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="title">
                     <p>Explore our new dataset on how much food is produced by differently sized farms. For each of the 55 countries, we found nationally representative surveys and censuses that asked farmers how much of each crop they produced. Using this information, we calculated how much total crop production (in kilocalories) each farm size produced. Because different types of crops are allocated towards human food, animal feed, processed non-food goods, seed for planting, or are wasted during storage and transportation, we then worked out how each farm size allocated their production. All together, our dataset has > 150 crops from 55 countries. Click each tab to find out how much food, feed, processed goods, seed, or waste small farms are producing and how much land they're using compared to larger farms - and check out how crop diversity differs across farm sizes.<br>
-                    <br>For more details <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">check out our article</a> and the <a href="https://data.mendeley.com/datasets/tp63z6dz5g/1" target="_blank">downloadable dataset</a> that contains sub-national information. Tested on Firefox and Safari browsers.</p>
+                    <br>For more details <a href="https://doi.org/10.1016/j.gfs.2018.05.002" target="_blank">check out our article</a> and the <a href="https://data.mendeley.com/datasets/tp63z6dz5g/1" target="_blank">downloadable dataset</a> that contains sub-national information.</p>
                 </div>
             </div>
         </header>
@@ -140,7 +140,7 @@
         <!-- Note that this is a customized version of Leaflet to enable fractional zooming. -->
         <script src="js/leaflet-master/leaflet.js"></script>
 
-        <script src="js/main.js?newversion"></script>
+        <script src="js/main.js"></script>
 
         <!-- Change UA-56383922-1 to your GA tracking code. -->
         <script>
