--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                         <div id="legend" class="descripts"></div>
                         <br><br>
                         <div class="table-header">
-                            <div class="name"><strong>Farm Size</strong></div>
+                            <div class="name"><strong>Farm Size<br>(1 ha = 2.5 acres)<br></strong></div>
                             <!-- <div class="party">_</div> -->
                             <!-- <div class="votes">Value</div> -->
-                            <div class="percentage"><strong>Percent by farm size</strong></div>
+                            <div class="percentage"><strong>Percent by farm size<br><br></strong></div>
                             <br>
                         </div>
                         <ul></ul>
