--- a/index.html
+++ b/index.html
@@ -44,29 +44,13 @@
         <div id="main">
             <section id="top">
                 <br><br>
-                <h2>Select a variable</h2>
+                <h2 style="color: #000000">Select a variable</h2>
                 <navigation></navigation>
 <!--                 <div id="status">
                     <div class="progress-bar"><span class="horizontal-bar"></span></div>
                     <span class="label"></span>
                 </div> -->
             </section>
-                <!-- <section>
-                    <br><br>
-                    <p>Farm Size Responsible for More Production:</p>
-                    <div style="display: table;">
-                        <div style="display: table-row;">
-                            <div style="display: table-cell;">Smaller&nbsp</div>
-                            <div style="display: table-cell;">&nbsp&nbspMixed&nbsp&nbsp</div>
-                            <div style="display: table-cell;">&nbsp&nbspLarger&nbsp</div>
-                        </div>
-                        <div style="display: table-row;">
-                            <div style="display: table-cell; background: #D01C8B">&nbsp</div>
-                            <div style="display: table-cell; background: #EFCBE1">&nbsp</div>
-                            <div style="display: table-cell; background: #4DAC26">&nbsp</div>
-                        </div>
-                    </div>
-                </section> -->
             <section id="exhibit">
                 <div id="hover-label">
                     <br>
@@ -75,28 +59,29 @@
                 </div>
                 <div id="map-wrapper"><div id="map">&nbsp;</div></div>
                 <div class="options">
-                    <section>
-                        <br><br>
-                        <p><strong>Farm size responsible for majority of production</strong></p>
-                        <div style="display: table;">
-                            <div style="display: table-row;">
-                                <div style="display: table-cell;">&nbsp&nbspSmall&nbsp&nbsp</div>
-                                <div style="display: table-cell;">&nbsp&nbspMixed&nbsp&nbsp</div>
-                                <div style="display: table-cell;">&nbsp&nbspLarge&nbsp&nbsp</div>
-                            </div>
-                            <div style="display: table-row;">
-                                <div style="display: table-cell; background: #D01C8B">&nbsp</div>
-                                <div style="display: table-cell; background: #EFCBE1">&nbsp</div>
-                                <div style="display: table-cell; background: #4DAC26">&nbsp</div>
-                            </div>
-                        </div>
-                        <br><br>
-                    </section>
                     <section id="candidates">
                         <!-- <div class="panel legend"> -->
                           <!-- <h4>Legend</h4> -->
                         <!-- <div id="legend"></div> -->
+                        <br>
                         <div id="legend" class="descripts"></div>
+                        <br>
+                        <div style="display: table;">
+                            <div style="display: table-row;">
+                                <div style="display: table-cell;">&nbsp&nbspSmall&nbsp&nbsp</div>
+                                <div style="display: table-cell;">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div>
+                                <div style="display: table-cell;">&nbsp&nbspMixed&nbsp&nbsp</div>
+                                <div style="display: table-cell;">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div>
+                                <div style="display: table-cell;">&nbsp&nbspLarge&nbsp&nbsp</div>
+                            </div>
+                            <div style="display: table-row;">
+                                <div style="display: table-cell; background: #D01C8B">&nbsp</div>
+                                <div style="display: table-cell; background: #E79FCB">&nbsp</div>
+                                <div style="display: table-cell; background: #D4D1D0">&nbsp</div>
+                                <div style="display: table-cell; background: #B3D9A3">&nbsp</div>
+                                <div style="display: table-cell; background: #4DAC26">&nbsp</div>
+                            </div>
+                        </div>
                         <br><br>
                         <div class="table-header">
                             <div class="name"><strong>Farm Size<br>(1 ha = 2.5 acres)<br></strong></div>
