Fix mobile bar chart view

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="name"><strong>Farm Size<br>(1 ha = 2.5 acres)<br></strong></div>
                             <!-- <div class="party">_</div> -->
                             <!-- <div class="votes">Value</div> -->
-                            <div class="percentage"><strong>Percent by farm size<br><br></strong></div>
+                            <div class="percentage"><strong>Percent by farm size<br>&nbsp<br></strong></div>
                             <br>
                         </div>
                         <ul></ul>
