Arbitrary first fork commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!-- Don't forget to change this. -->
         <title>How much of the world's food do smallholders produce?</title>
-        <meta name="description" content="Results from Ricciardi et al. 2018 doi: 10.1016/j.gfs.2018.05.002">
+        <meta name="description" content="Results from Ricciardi et al., 2018 doi: 10.1016/j.gfs.2018.05.002">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
